# encrypted_covert_channel

./: .gitignore  CMakeLists.txt  Clefia.c  README.md  TCP_Packet.cpp  TCP_Packet.h  aggregate_results.py  c.json  config.json  config_backup.json  install_requirements.sh  main.cpp  message.txt  notes.txt  test_client.sh  test_client_one.sh  test_client_singular.sh
C_language/: Clefia.c  PRESENT.c  grain.c  grain.h
des/: sample_file_to_Decrypt.cpp  sample_file_to_Encryption.cpp  sample_terminal.cpp
include/: AES.h  Clefia.h  Cryptographer.h  DES.h  Evaluation.h  Globals.h  RSA.h  Receiver.h  Sender.h  clefia.h  grain.h  hexprint.h  openssl_rsa.h  util.h
keys/: private.pem  public.pem
network_traffic_entropy_analysis/: get_entropy.py
src/: AES.cpp  Clefia.cpp  Clefia.hpp  Cryptographer.cpp  DES.cpp  Evaluation.cpp  Globals.cpp  Grain.c  MethodTypeEnum.cpp  PRESENT.c  Present.c  RSA.cpp  Receiver.cpp  Sender.cpp  aes.hpp  clefia.c  des.cpp  des.hpp  grain.c  openssl_rsa.cpp  present.hpp  rsa.cpp  tables.h  trivium.hpp
test/: _client_LSB_.csv  _client_LSB_aes.csv  _client_LSB_clefia.csv  _client_LSB_des.csv  _client_LSB_grain.csv  _client_LSB_present.csv  _client_LSB_rsa.csv  _client_sequence_clefia.csv  _client_sequence_present.csv  _client_sequence_rsa.csv  aggregate_results.py  agregate_for_charts.py  print_charts.py  test.sh  test_HTTP.sh  test_IP_ID.sh  test_LSB.sh  test_LSB_without.sh  test_aes.sh  test_chage.sh  test_clefia.sh  test_client.sh  test_client_one.sh  test_cpu_crypto.sh  test_cpu_mem.sh  test_http.sh  test_loss.sh  test_loss_old.sh  test_present.sh  test_rsa.sh  test_sequence.sh  test_storage.sh  test_tim_spec.sh  test_timing.sh  test_timing_client.sh  test_with_loss.sh
